# YoutubeDownload

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  HOSTING.md  README.md  docker-compose.yml  pyproject.toml  taskv2  taskv3  скач - YouTube в MP3 (1).html  скач - YouTube в MP3.html
gstack/: gentyuk-yt2mp3-design-20260524.md  gentyuk-yt2mp3-test-plan-20260524-040239.md  yt2mp3-v2-design-20260524.md
tests/: conftest.py  test_auth.py  test_db_concurrent.py  test_dedup.py  test_endpoints.py  test_errors.py  test_library_endpoints.py  test_library_grouping.py  test_per_ip.py  test_queue.py  test_sanitize.py  test_smoke_online.py  test_url_parser.py
yt2mp3/: __init__.py  __main__.py  app.py  config.py  db.py  downloader.py  helpers.py  i18n.py  library.py  logs.py  queue.py  sysmon.py
yt2mp3/static/: app.css  app.js
yt2mp3/templates/: _form_result.html  _library_recent.html  _queue.html  admin.html  base.html  index.html  library.html  login.html  stats.html
