[project]
name = "yt2mp3"
version = "0.1.0"
description = "Personal YouTube → MP3 archive with stats dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "yt-dlp>=2025.1.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt2mp3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
markers = [
    "online: real network test (excluded by default)",
]
addopts = "-m 'not online'"
testpaths = ["tests"]
